--- a/SimpleFTP.Core/SimpleFTP.Core.csproj
+++ b/SimpleFTP.Core/SimpleFTP.Core.csproj
@@ -39,7 +39,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FtpClient.cs" />
+    <Compile Include="FileSystem\FileSystemHelper.cs" />
+    <Compile Include="FileSystem\FilySystemItem.cs" />
+    <Compile Include="FileSystem\IFileSystemHelper.cs" />
+    <Compile Include="Ftp\FtpClient.cs" />
+    <Compile Include="Ftp\FtpState.cs" />
+    <Compile Include="Ftp\IFtpClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
