--- a/SimpleFTP.Core/SimpleFTP.Core.csproj
+++ b/SimpleFTP.Core/SimpleFTP.Core.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileSystem\FileSystemHelper.cs" />
-    <Compile Include="FileSystem\FilySystemItem.cs" />
+    <Compile Include="FileSystem\FileSystemItem.cs" />
     <Compile Include="FileSystem\IFileSystemHelper.cs" />
     <Compile Include="Ftp\FtpClient.cs" />
     <Compile Include="Ftp\FtpState.cs" />
